# smartpool

./: .gitignore  README.md
examples/: simple_example.py
examples/cross_validation/: config.py  data_utils.py  main.py  model_utils.py  visualization.py
examples/cross_validation/models/: __init__.py
smartpool/: pyproject.toml  upload_pypi.py
smartpool/smartpool/: __init__.py  gpuinfos.py  pool.py  sysinfo.py  task.py  utils.py  worker.py
smartpool/smartpool/interpreterpool/: __init__.py  interpreterpool.py  interpreterworker.py  worker.py
smartpool/smartpool/processpool/: __init__.py  module_deps.py  processpool.py  processworker.py  worker.py
smartpool/smartpool/threadpool/: threadpool.py  threadworker.py  worker.py
smartpool_examples/: install_wheel.py  pyproject.toml  run_count_prime.py  run_cross_validation.py  upload_pypi.py
smartpool_examples/smartpool_examples/count_prime/: __main__.py
smartpool_examples/smartpool_examples/cross_validation/: __main__.py  model_utils.py
smartprocesspool/: __init__.py  asizeof.py  smartprocesspool.py  sysinfo.py  task.py  torch_utils.py  utils.py  worker.py
