[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpool-examples"
version = "0.1.0"
description = "Examples for smartpool."
readme = "README.md"
authors = [
    { name = "王炳辉", email = "binghui.wang@foxmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "smartpool",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "rich",
    "click",
    "joblib"
]

[project.urls]
Homepage = "https://github.com/Time-Coder/smartpool"
Repository = "https://github.com/Time-Coder/smartpool.git"